adds gradients, body margin, points to fonts (still not loading though)

--- a/site/index.html
+++ b/site/index.html
@@ -11,6 +11,7 @@
     <link href="img/favicon.png" rel="shortcut icon">
 </head>
 <body>
+	<div id="top_vignette"></div>
 
     <div id="main_container" class="container">
         <!-- Header -->
@@ -224,8 +225,6 @@
                 </div>
             </div>
 
-
-
         </div>
 
         <!-- Bottom down arrow ornament -->
@@ -235,6 +234,7 @@
             </div>
         </div>
     </div>
+	<div id="bottom_vignette"></div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
