--- a/site/index.html
+++ b/site/index.html
@@ -230,11 +230,46 @@
         <!-- Bottom down arrow ornament -->
         <div class="row">
             <div class="col-md-12 text-center">
-                <img id="bottom_ornament" src="img/bottomornament.gif" alt="">
+                <img id="bottom_ornament" src="img/bottomornament.gif" alt="End of timeline">
+            </div>
+        </div>
+
+        <div id="bottom_vignette"></div>
+
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <img id="stuart_advertising_offices" src="img/house.png" alt="Stuart Advertising Offices">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <img src="img/logo.gif" alt="Stuart Advertising Logo">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <ul id="what_stuart_does">
+                    <li>Advertising</li>
+                    <li>Marketing</li>
+                    <li>Media Placement</li>
+                    <li>Broadcast Media</li>
+                    <li>Print</li>
+                    <li>Online</li>
+                    <li>Outdoor</li>
+                    <li>Direct Mail</li>
+                </ul>
+
+                <br>
+
+                <h1 id="stuart_phone_number"><a href="tel:5094485601">(509) 448-5601</a></h1>
+                <a id="stuart_email" href="mailto:info@stuartadv.com">info@stuartadv.com</a>
             </div>
         </div>
     </div>
-	<div id="bottom_vignette"></div>
+
+
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
